[gd_scene load_steps=2 format=3 uid="uid://7y0qcpweo22u"]

[ext_resource type="Script" uid="uid://dok30v16ebapi" path="res://scripts/killzone.gd" id="1_e3nmr"]

[node name="Killzone" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_e3nmr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.114

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="StuckCheckTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StuckCheckTimer" to="." method="_on_stuck_check_timer_timeout"]
